--- a/solo-project/src/app/header/header.component.html
+++ b/solo-project/src/app/header/header.component.html
@@ -1,1 +1,5 @@
-<p>header works!</p>
+<div class="header-css">
+  <img src="cdspin.gif" alt="cd spinning" />
+  <h1>Music Playlist App</h1>
+
+</div>
