--- a/solo-project/src/styles.css
+++ b/solo-project/src/styles.css
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+@font-face {
+  font-family: 'Virtual';
+  src: url(assets/fonts/virtual_dj/Vdj.ttf);
+}
+
+
