--- a/solo-project/src/app/playlist/new-song/new-song.component.css
+++ b/solo-project/src/app/playlist/new-song/new-song.component.css
@@ -1,3 +1,50 @@
 .bubble-divider {
   text-align: center;
 }
+
+.song-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
+
+
+.input-css, .input-css1 {
+  font-family: 'VT323';
+  font-size: larger;
+  color: rgb(18, 153, 202);
+  padding: 5px;
+  border-radius: 4px;
+  border-color: rgba(200, 191, 191, 0.3);
+
+}
+
+.add-btn-css {
+  font-family: 'VT323';
+  font-size: large;
+  color:rgb(18, 153, 202);
+  padding: 7px;
+  box-shadow: 0px 1px 4px -2px #333;
+  border: none;
+  border-radius: 6px;
+  background-image: linear-gradient(rgba(170, 238, 255, 0.5), rgb(255, 255, 255));
+  transition-duration: 0.4s;
+  cursor: pointer;
+
+}
+
+.add-btn-css:hover {
+  transform: translateY(-4px);
+}
+
+header {
+font-family: 'Virtual';
+font-size: large;
+color: white;
+text-align: center;
+}
+
