--- a/solo-project/src/app/playlist/song/song.component.html
+++ b/solo-project/src/app/playlist/song/song.component.html
@@ -1,9 +1,8 @@
 <div class="song-card">
-  <div>
     <ul>
       <li>
+        <img src="disc.gif" alt="disc">
         {{ data()!.title }} - {{ data()!.artist }} - {{ data()!.album }} - {{ data()!.year}} <button (click)="removeHandler()" class="danger-btn">X</button>
       </li>
     </ul>
-  </div>
 </div>
