--- a/solo-project/src/app/footer/footer.component.css
+++ b/solo-project/src/app/footer/footer.component.css
@@ -2,6 +2,7 @@
   font-family: 'Virtual';
   text-align: center;
   color: white;
+  padding: 5px;
   box-shadow: 0px 1px 4px -2px #333;
   text-shadow: 0px -1px #333;
   background-image: linear-gradient(rgba(24, 85, 136, 0.5), rgba(170, 238, 255, 0.5));
