--- a/solo-project/src/app/playlist/new-song/new-song.component.html
+++ b/solo-project/src/app/playlist/new-song/new-song.component.html
@@ -1,17 +1,20 @@
-<div class="bubble-divider">
-  <img src="bubbles2.gif" alt="bubbles"><img src="bubbles2.gif" alt="bubbles"><img src="bubbles2.gif" alt="bubbles"><img src="bubbles2.gif" alt="bubbles"><img src="bubbles2.gif" alt="bubbles">
-</div>
 
+<header><h1>Add to Playlist</h1></header>
 <div class="new-song">
-  <form (ngSubmit)="addSongHandler()">
-    <input type="text" name="title" placeholder="song title..." [(ngModel)]="title">
+  <form (ngSubmit)="addSongHandler()" class="form-css">
 
-    <input type="text" name="artist" placeholder="artist..." [(ngModel)]="artist">
+    <div class="song-form">
+    <input type="text" name="title" placeholder="song title..." [(ngModel)]="title" class="input-css1">
 
-    <input type="text" name="album" placeholder="album title..." [(ngModel)]="album">
+    <input type="text" name="artist" placeholder="artist..." [(ngModel)]="artist" class="input-css1">
 
-    <input type="number" name="year" placeholder="year..." [(ngModel)]="year">
-    <button>Add Song</button>
+    <input type="text" name="album" placeholder="album title..." [(ngModel)]="album" class="input-css1">
+
+    <input type="number" name="year" placeholder="year..." [(ngModel)]="year" class="input-css">
+
+
+    <button class="add-btn-css">Add Song</button>
+  </div>
   </form>
 </div>
 
