--- a/solo-project/src/app/playlist/playlist.component.css
+++ b/solo-project/src/app/playlist/playlist.component.css
@@ -2,29 +2,19 @@
 margin-top: 10px;
 }
 
-
-.danger-btn {
-  border-radius: 5px;
-  border: 1px solid white;
-  background-color: tomato;
-  color: white;
-
-}
-
-.danger-btn:hover {
-  background-color: red;
-}
-
-.bubble-divider {
-  text-align: center;
-
-}
-
 .playlist-icon {
   width: 200px;
+
 }
 
+header:hover {
+  transform: translateY(-4px);
+}
+
+
 header {
+  width: 1000px;
+  margin: 0 auto;
   font-family: 'Virtual';
   border-radius: 10px;
   color: white;
@@ -32,6 +22,7 @@ header {
   display: flex;
   align-items: center;
   padding: 10px;
-  gap: 2em;
+  gap: 8em;
   font-size: large;
+  transition-duration: 0.4s;
 }
