--- a/solo-project/src/app/playlist/song/song.component.css
+++ b/solo-project/src/app/playlist/song/song.component.css
@@ -1,11 +1,12 @@
 ul {
+  padding: 5px;
   list-style-type: none;
   width: 1000px;
-
-
 }
 
 li {
+  font-size: xx-large;
+  font-family: 'VT323';
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -15,5 +16,24 @@ li {
   color: white;
   background-image: linear-gradient(rgba(24, 85, 136, 0.5), rgba(170, 238, 255, 0.5));
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
-  margin-bottom: 5px;
+  transition-duration: 0.3s;
+
+}
+
+li:hover {
+  background-image: linear-gradient(rgba(24, 85, 136, 0.8), rgba(170, 238, 255, 0.8));
+  transform: translateY(-4px);
+}
+
+.danger-btn {
+  border-radius: 5px;
+  border-color: rgba(200, 191, 191, 0.3);
+  background-color: white;
+  color: #c8bfbf;
+
+}
+
+.danger-btn:hover {
+  background-color: tomato;
+  cursor: pointer;
 }
