--- a/solo-project/src/styles.css
+++ b/solo-project/src/styles.css
@@ -3,4 +3,7 @@
   src: url(assets/fonts/virtual_dj/Vdj.ttf);
 }
 
-
+@font-face {
+  font-family: 'VT323';
+  src: url(assets/fonts/VT323/VT323-Regular.ttf);
+}
