--- a/solo-project/src/app/playlist/song/song.component.css
+++ b/solo-project/src/app/playlist/song/song.component.css
@@ -25,6 +25,31 @@ li:hover {
   transform: translateY(-4px);
 }
 
+.da-buttons {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 4px;
+}
+
+.edit-btn {
+  font-family: 'VT323';
+  font-size: medium;
+  text-align: center;
+  color: #aba4a4;
+  box-shadow: 0px 1px 4px -2px #333;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 5px;
+  border-color: rgba(200, 191, 191, 0.3);
+  background-color: white;
+}
+
+.edit-btn:hover {
+  background-image: linear-gradient(rgba(170, 238, 255, 0.8), rgb(255, 255, 255));
+  color: #333;
+}
+
 .danger-btn {
   border-radius: 5px;
   border-color: rgba(200, 191, 191, 0.3);
@@ -35,5 +60,6 @@ li:hover {
 
 .danger-btn:hover {
   background-color: tomato;
+  color: grey;
   cursor: pointer;
 }
