--- a/solo-project/src/app/playlist/playlist.component.html
+++ b/solo-project/src/app/playlist/playlist.component.html
@@ -1,12 +1,13 @@
 
 <div class="container">
-<header><img src="icon4.jpg" alt="playlist-icon" class="playlist-icon"><h1>Your Playlist</h1></header>
 
+<header><img src="icon4.jpg" alt="playlist-icon" class="playlist-icon"><h1>Your Playlist</h1></header>
+ <div class="main">
 @for (song of songs(); track song.title) {
   <app-song [data]="song" />
 }
 
-
+</div>
 <app-new-song />
 
 </div>
